# TPF-PRA-LopezVilaclara-Vulcano

./: README.md
install/: local_setup.sh  setup.sh
install/tpf_navigation/lib/tpf_navigation/: controller_node  localization_node  map_loader_node  planner_node
install/tpf_navigation/share/tpf_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tpf_package/lib/tpf_package/: explorer_node  map_saver_node  slam_node
install/tpf_package/share/tpf_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tpf_package/share/tpf_package/config/: slam_defaults.yaml
install/tpf_package/share/tpf_package/rviz/: slam_config.rviz  slam_config2.rviz
install/turtlebot3_custom_simulation/include/turtlebot3_custom_simulation/: turtlebot3_custom_simulation.hpp
install/turtlebot3_custom_simulation/lib/turtlebot3_custom_simulation/: turtlebot3_custom_simulation
install/turtlebot3_custom_simulation/share/turtlebot3_custom_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
maps/: generated_map.pgm  generated_map.yaml
ros2_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/tpf_navigation/: package.xml  setup.cfg  setup.py
ros2_ws/src/tpf_navigation/config/: navigation_params.yaml
ros2_ws/src/tpf_navigation/launch/: navigation_launch.py
ros2_ws/src/tpf_package/: package.xml  setup.cfg  setup.py
(+46 files in other folders)
